Removed dev-build, improvements

--- a/misc/template.ejs
+++ b/misc/template.ejs
@@ -5,6 +5,6 @@
 		<title><%= htmlWebpackPlugin.options.title %></title>
 	</head>
 	<body>
-		<div id="<%= htmlWebpackPlugin.options.renderId %>"></div>
+		<div id="<%= htmlWebpackPlugin.options.root %>"></div>
 	</body>
 </html>
