start menu removed, readme changed

--- a/source/styles/partials/_content.scss
+++ b/source/styles/partials/_content.scss
@@ -9,6 +9,7 @@
 		border: none;
 		border-radius: 5px;
 		box-shadow: none;
+		cursor: pointer;
 		font-size: 20px;
 		line-height: 1.8;
 		padding: 10px 45px;
