--- a/source/styles/partials/_variables.scss
+++ b/source/styles/partials/_variables.scss
@@ -1,5 +1,5 @@
 $font: 'Arial';
-$color-1: #fff;
+$color-1: #fafafa;
 $color-2: #333;
 $increment-background: #6496c8;
 $decrement-background: #c86464;
