register working, login not

--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -1,6 +1,7 @@
 @import 'partials/mixins';
 @import 'partials/variables';
 @import 'partials/content';
+@import 'partials/bootstrap';
 
 html,
 body,
