--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -1,13 +1,26 @@
+$font-size-base:          14px !default;
+$font-size-h1:            floor(($font-size-base * 2.4)) !default; // ~34px
+$font-size-h2:            floor(($font-size-base * 2)) !default; // ~28px
+$font-size-h3:            ceil(($font-size-base * 1.6)) !default; // ~22px
+$font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
+
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap-sprockets";
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
 @import 'partials/mixins';
 @import 'partials/variables';
 @import 'partials/content';
 @import 'partials/bootstrap';
 
+div > h1:first-child {
+	margin-top: 0;
+}
+
 html,
 body,
 body > div,
 .wrapper {
-	height: 100%;
+	min-height: 100%;
 	margin: 0;
 	width: 100%;
 }
