working mentions plugin with brackets

--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -59,3 +59,19 @@ body.wait {
 		cursor: wait !important;
 	}
 }
+
+.editor {
+	box-sizing: border-box;
+	border: 1px solid #ddd;
+	cursor: text;
+	padding: 16px;
+	border-radius: 2px;
+	margin-bottom: 2em;
+	box-shadow: inset 0px 1px 8px -3px #ABABAB;
+	background: #fefefe;
+	min-height: 140px;
+}
+
+.mentionSuggestionPortal {
+	background-color: $decrement-background;
+}
