--- a/source/styles/partials/_tangle.scss
+++ b/source/styles/partials/_tangle.scss
@@ -1,7 +1,17 @@
+.noselect {
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 .adjustable-number {
 	color: #0dbe04;
 	white-space: pre-wrap;
-	cursor: col-resize;
+	cursor: ew-resize;
 }
 .adjustable-number:hover {
 	background-color: #e4ffed;
