--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -4,7 +4,7 @@ $font-size-h2:            floor(($font-size-base * 2)) !default; // ~28px
 $font-size-h3:            ceil(($font-size-base * 1.6)) !default; // ~22px
 $font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
 
-$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
+$icon-font-path: "../../node_modules/bootstrap-sass/assets/fonts/bootstrap/";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 @import "../../node_modules/react-bootstrap-typeahead/css/Typeahead.css";
