--- a/source/styles/partials/_variables.scss
+++ b/source/styles/partials/_variables.scss
@@ -1,3 +1,5 @@
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+
 $font: 'normal 15px/1.5 "Source Sans Pro", sans-serif';
 $color-1: #fafafa;
 $color-2: #333;
