--- a/source/styles/partials/_bootstrap.scss
+++ b/source/styles/partials/_bootstrap.scss
@@ -1,4 +1,4 @@
-@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+@import "variables";
 
 .page-header {
 	margin-top: 3px;
