--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -1,15 +1,3 @@
-$font-size-base:          14px !default;
-$font-size-h1:            floor(($font-size-base * 2.4)) !default; // ~34px
-$font-size-h2:            floor(($font-size-base * 2)) !default; // ~28px
-$font-size-h3:            ceil(($font-size-base * 1.6)) !default; // ~22px
-$font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
-
-$icon-font-path: "../../node_modules/bootstrap-sass/assets/fonts/bootstrap/";
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-
-@import "../../node_modules/react-bootstrap-typeahead/css/Typeahead.css";
-@import "../../node_modules/react-bootstrap-typeahead/css/Token.css";
-
 @import 'partials/mixins';
 @import 'partials/variables';
 @import 'partials/content';
@@ -67,7 +55,7 @@ body.wait {
 	padding: 16px;
 	border-radius: 2px;
 	margin-bottom: 2em;
-	box-shadow: inset 0px 1px 8px -3px #ABABAB;
+	box-shadow: inset 0 1px 8px -3px #ABABAB;
 	background: #fefefe;
 	min-height: 140px;
 }
