--- a/source/styles/_content.scss
+++ b/source/styles/_content.scss
@@ -8,7 +8,7 @@
 .content {
 	min-height: 100%;
 	width: 100%;
-	padding: 15px;
+	padding: $contentPadding-x $contentPadding-y;
 
 	&__subscribe {
 		padding: 5px;
@@ -34,7 +34,8 @@
 	}
 
 	&__panelTitle {
-		font-size: 20px;
+		font-size: 16px;
+		line-height: 1.2em;
 		text-overflow: ellipsis;
 		white-space: nowrap;
 		overflow: hidden;
@@ -56,11 +57,11 @@
 		}
 
 		&--increment {
-			@include button($increment-background);
+		//	@include button($increment-background);
 		}
 
 		&--decrement {
-			@include button($decrement-background);
+		//	@include button($decrement-background);
 		}
 	}
 
